bonus (copy)/confs/gitlab-ingress.yaml
# Configure Kubernetes ingress for GitLab web interface
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: "traefik"    # Using Traefik as ingress controller
spec:
  rules:
  - host: gitlab.local    # Hostname for GitLab access
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-webservice    # GitLab web service
            port:
              number: 80              # Service port
